tests/cmp/record-pat-dotdot-outside-braces.golden
Parse Error:
tests/cmp/record-pat-dotdot-outside-braces.trp:3:9 unexpected token TokenDotDot
