tests/cmp/record-pat-dotdot-outside-braces.trp
(* Test: .. outside record braces - should fail *)
let val r = {a = 1, b = 2, c = 3}
    val .. {a, b} = r
in a + b
end